--- a/.github/workflows/php-application-image-manual.yml
+++ b/.github/workflows/php-application-image-manual.yml
@@ -71,7 +71,7 @@ jobs:
           context: base
           file: base/Dockerfile
           build-args: "PHP_VERSION=${{ github.event.inputs.php_version }}"
-          platforms: linux/amd64,linux/arm64,linux/arm64/v8
+          platforms: linux/amd64,linux/arm64/v8
           push: true
           tags: "phpimageleague/php-application-server:${{ github.event.inputs.tag }}-${{ github.event.inputs.php_version }}-${{ github.event.inputs.server }}"
           cache-from: type=gha
