--- a/.github/workflows/php-application-image.yml
+++ b/.github/workflows/php-application-image.yml
@@ -9,13 +9,44 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        php_version:
-          - "7.4" # graceful, right?
-          - "8.0"
-          - "8.1"
-          - "8.2"
+        includes:
+          - tag: cli
+            php_version: 7.4
+          - tag: cli
+            php_version: 8.0
+          - tag: cli
+            php_version: 8.1
+          - tag: cli
+            php_version: 8.2
+          - tag: web
+            php_version: 7.4
+            server: fpm
+          - tag: web
+            php_version: 8.0
+            server: fpm
+          - tag: web
+            php_version: 8.1
+            server: fpm
+          - tag: web
+            php_version: 8.2
+            server: fpm
+          - tag: web-dev
+            php_version: 8.0
+            server: fpm
+          - tag: web-dev
+            php_version: 8.1
+            server: fpm
+          - tag: web-dev
+            php_version: 8.2
+            server: fpm
     runs-on: ubuntu-latest
     steps:
+      -
+        name: test
+        run: |
+          echo ${{ join(matrix.*, '-') }}
+          echo ${{ join(matrix, '-') }}
+          exit 1
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -35,7 +66,7 @@ jobs:
           ref: 'main'
       -
         name: Pre process Dockerfile
-        run: make PHP_VERSION=${{ matrix.php_version }} TAG=cli compile-base
+        run: make PHP_VERSION=${{ matrix.php_version }} TAG=${{ matrix.tag }} SERVER=${{ matrix.server }} compile-base
       -
         name: Build docker image
         uses: docker/build-push-action@v3
@@ -45,107 +76,9 @@ jobs:
           build-args: "PHP_VERSION=${{ matrix.php_version }}"
           platforms: linux/amd64,linux/arm64/v8
           push: true
-          tags: "phpimageleague/php-application-server:cli-${{ matrix.php_version }}"
+          tags: "phpimageleague/php-application-server:${{ matrix.tag }}-${{ matrix.php_version }}"
           cache-from: type=gha
           cache-to: type=gha,mode=max
       -
         name: Tagging of images
-        run: make IMAGE=phpimageleague/php-application-server:cli-${{ matrix.php_version }} PHP_VERSION=${{ matrix.php_version }} TAG=cli tag
-
-  update-web-images:
-    continue-on-error: true
-    strategy:
-      matrix:
-        php_version:
-          - "7.4" # graceful, right?
-          - "8.0"
-          - "8.1"
-          - "8.2"
-        server:
-         - "fpm"
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      -
-        name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Checkout the code
-        uses: actions/checkout@v3
-        with:
-          ref: 'main'
-      -
-        name: Pre process Dockerfile
-        run: make PHP_VERSION=${{ matrix.php_version }} SERVER=${{ matrix.server }} TAG=web compile-base
-      -
-        name: Build docker image
-        uses: docker/build-push-action@v3
-        with:
-          context: base
-          file: base/Dockerfile
-          build-args: "PHP_VERSION=${{ matrix.php_version }}"
-          platforms: linux/amd64,linux/arm64/v8
-          push: true
-          tags: "phpimageleague/php-application-server:web-${{ matrix.php_version }}-${{ matrix.server }},phpimageleague/php-application-server:web-${{ matrix.server }}-${{ matrix.php_version }}"
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-      -
-        name: Tagging of images
-        run: make IMAGE=phpimageleague/php-application-server:web-${{ matrix.php_version }}-${{ matrix.server }} PHP_VERSION=${{ matrix.php_version }} SERVER=${{ matrix.server }} TAG=web tag
-
-  update-web-dev-images:
-    continue-on-error: true
-    strategy:
-      matrix:
-        php_version:
-          # no images for 7 since xdebug only works with php > 8
-          - "8.0"
-          - "8.1"
-          - "8.2"
-        server:
-         - "fpm"
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      -
-        name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Checkout the code
-        uses: actions/checkout@v3
-        with:
-          ref: 'main'
-      -
-        name: Pre process Dockerfile
-        run: make PHP_VERSION=${{ matrix.php_version }} SERVER=${{ matrix.server }} TAG=web-dev compile-base
-      -
-        name: Build docker image
-        uses: docker/build-push-action@v3
-        with:
-          context: base
-          file: base/Dockerfile
-          build-args: "PHP_VERSION=${{ matrix.php_version }}"
-          platforms: linux/amd64,linux/arm64/v8
-          push: true
-          tags: "phpimageleague/php-application-server:web-dev-${{ matrix.php_version }}-${{ matrix.server }},phpimageleague/php-application-server:web-dev-${{ matrix.server }}-${{ matrix.php_version }}"
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-      -
-        name: Tagging of images
-        run: make IMAGE=phpimageleague/php-application-server:web-dev-${{ matrix.php_version }}-${{ matrix.server }} PHP_VERSION=${{ matrix.php_version }} SERVER=${{ matrix.server }} TAG=web-dev tag
+        run: make IMAGE=phpimageleague/php-application-server:${{ matrix.tag }}-${{ matrix.php_version }} PHP_VERSION=${{ matrix.php_version }} TAG=${{ matrix.tag }} tag
