--- a/.github/workflows/php-application-image.yml
+++ b/.github/workflows/php-application-image.yml
@@ -45,9 +45,9 @@ jobs:
         name: test
         run: |
           echo ${{ matrix }}
-          echo ${{ toJson(matrix) }}
-          echo ${{ join(matrix.*, '-') }}
-          echo ${{ join(matrix, '-') }}
+          echo ${{ join(matrix.includes, '-') }}
+          echo ${{ fromJson(toJson(matrix)) }}
+          echo ${{ join(fromJson(toJson(matrix)).includes) }}
           exit 1
       -
         name: Set up QEMU
