--- a/.github/workflows/php-application-image.yml
+++ b/.github/workflows/php-application-image.yml
@@ -10,14 +10,14 @@ jobs:
     strategy:
       matrix:
         includes:
-          - tag: cli
-            php_version: 7.4
+#          - tag: cli
+#            php_version: 7.4
 #          - tag: cli
 #            php_version: 8.0
 #          - tag: cli
 #            php_version: 8.1
-#          - tag: cli
-#            php_version: 8.2
+          - tag: cli
+            php_version: 8.2
 #          - tag: web
 #            php_version: 7.4
 #            server: fpm
@@ -41,20 +41,6 @@ jobs:
             server: fpm
     runs-on: ubuntu-latest
     steps:
-      -
-        name: save tag name
-        id: tag_name
-        run: echo "tag=${{ matrix.tag }}-${{ matrix.php_version }}" >> $GITHUB_OUTPUT
-      -
-        name: add server to tag name
-        id: tag_name_server
-        if: ${{ matrix.server }}
-        run: echo "tag=-${{ matrix.server }}" >> $GITHUB_OUTPUT
-      -
-        name: output tag
-        run: |
-            echo "${{ steps.tag_name.outputs.tag }}${{ steps.tag_name_server.outputs.tag }}"
-            exit 1
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -84,9 +70,9 @@ jobs:
           build-args: "PHP_VERSION=${{ matrix.php_version }}"
           platforms: linux/amd64,linux/arm64/v8
           push: true
-          tags: "phpimageleague/php-application-server:${{ matrix.tag }}-${{ matrix.php_version }}"
+          tags: "phpimageleague/php-application-server:${{ github.run_id }}"
           cache-from: type=gha
           cache-to: type=gha,mode=max
       -
         name: Tagging of images
-        run: make IMAGE=phpimageleague/php-application-server:${{ matrix.tag }}-${{ matrix.php_version }} PHP_VERSION=${{ matrix.php_version }} TAG=${{ matrix.tag }} tag
+        run: make IMAGE=phpimageleague/php-application-server:${{ github.run_id }} PHP_VERSION=${{ matrix.php_version }} TAG=${{ matrix.tag }} SERVER=${{ matrix.server }} tag
