--- a/.github/workflows/php-application-image-manual.yml
+++ b/.github/workflows/php-application-image-manual.yml
@@ -46,41 +46,16 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: 'main'
-      -
-        name: Pre process Dockerfile
-        run: make PHP_VERSION=${{ github.event.inputs.php_version }} SERVER=${{ github.event.inputs.server }} TAG=${{ github.event.inputs.tag }} compile-base
-      -
-        name: Build docker image (with server)
-
-        if: ${{ github.event.inputs.server }}
+      - name: Pre process Dockerfile
+        run: "make PHP_VERSION=${{ github.event.inputs.php_version }} TAG=${{ github.event.inputs.tag }} SERVER=${{ github.event.inputs.server }} compile-base"
+      - name: Build docker image
         uses: docker/build-push-action@v3
         with:
           context: base
           file: base/Dockerfile
           build-args: "PHP_VERSION=${{ github.event.inputs.php_version }}"
-          platforms: linux/amd64,linux/arm64/v8
+          platforms: linux/amd64,linux/arm64,linux/arm64/v7
           push: true
-          tags: "phpimageleague/php-application-server:${{ github.event.inputs.tag }}-${{ github.event.inputs.php_version }}-${{ github.event.inputs.server }},phpimageleague/php-application-server:${{ github.event.inputs.tag }}-${{ github.event.inputs.server }}-${{ github.event.inputs.php_version }}"
+          tags: "phpimageleague/php-application-server:${{ github.run_id }}"
           cache-from: type=gha
           cache-to: type=gha,mode=max
-      -
-        name: Build docker image (without server)
-        if: ${{ !github.event.inputs.server }}
-        uses: docker/build-push-action@v3
-        with:
-          context: base
-          file: base/Dockerfile
-          build-args: "PHP_VERSION=${{ github.event.inputs.php_version }}"
-          platforms: linux/amd64,linux/arm64/v8
-          push: true
-          tags: "phpimageleague/php-application-server:${{ github.event.inputs.tag }}-${{ github.event.inputs.php_version }}-${{ github.event.inputs.server }}"
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-      -
-        name: Tagging of images (with server)
-        if: ${{ github.event.inputs.server }}
-        run: make IMAGE=phpimageleague/php-application-server:${{ github.event.inputs.tag }}-${{ github.event.inputs.php_version }}-${{ github.event.inputs.server }} PHP_VERSION=${{ github.event.inputs.php_version }} SERVER=${{ github.event.inputs.server }} TAG=${{ github.event.inputs.tag }} tag
-      -
-        name: Tagging of images (without server)
-        if: ${{ !github.event.inputs.server }}
-        run: make IMAGE=phpimageleague/php-application-server:${{ github.event.inputs.tag }}-${{ github.event.inputs.php_version }} PHP_VERSION=${{ github.event.inputs.php_version }} TAG=${{ github.event.inputs.tag }} tag
