--- a/.github/workflows/php-application-image.yml
+++ b/.github/workflows/php-application-image.yml
@@ -68,7 +68,7 @@ jobs:
           context: base
           file: base/Dockerfile
           build-args: "PHP_VERSION=${{ matrix.php_version }}"
-          platforms: linux/amd64,linux/arm64/v8
+          platforms: linux/amd64,linux/arm64,linux/arm64/v7
           push: true
           tags: "phpimageleague/php-application-server:${{ github.run_id }}"
           cache-from: type=gha
