enable all supported versions in scheduled job

--- a/.github/workflows/php-application-image.yml
+++ b/.github/workflows/php-application-image.yml
@@ -10,32 +10,32 @@ jobs:
     strategy:
       matrix:
         include:
-#          - tag: cli
-#            php_version: 7.4
-#          - tag: cli
-#            php_version: 8.0
-#          - tag: cli
-#            php_version: 8.1
+          - tag: cli
+            php_version: 7.4
+          - tag: cli
+            php_version: 8.0
+          - tag: cli
+            php_version: 8.1
           - tag: cli
             php_version: 8.2
-#          - tag: web
-#            php_version: 7.4
-#            server: fpm
-#          - tag: web
-#            php_version: 8.0
-#            server: fpm
-#          - tag: web
-#            php_version: 8.1
-#            server: fpm
-#          - tag: web
-#            php_version: 8.2
-#            server: fpm
-#          - tag: web-dev
-#            php_version: 8.0
-#            server: fpm
-#          - tag: web-dev
-#            php_version: 8.1
-#            server: fpm
+          - tag: web
+            php_version: 7.4
+            server: fpm
+          - tag: web
+            php_version: 8.0
+            server: fpm
+          - tag: web
+            php_version: 8.1
+            server: fpm
+          - tag: web
+            php_version: 8.2
+            server: fpm
+          - tag: web-dev
+            php_version: 8.0
+            server: fpm
+          - tag: web-dev
+            php_version: 8.1
+            server: fpm
           - tag: web-dev
             php_version: 8.2
             server: fpm
