--- a/.github/workflows/php-application-image.yml
+++ b/.github/workflows/php-application-image.yml
@@ -12,32 +12,43 @@ jobs:
         include:
           - tag: cli
             php_version: 7.4
+            arches: linux/amd64,linux/arm64
           - tag: cli
             php_version: 8.0
+            arches: linux/amd64,linux/arm64
           - tag: cli
             php_version: 8.1
+            arches: linux/amd64,linux/arm64
           - tag: cli
             php_version: 8.2
+            arches: linux/amd64,linux/arm64
           - tag: web
             php_version: 7.4
+            arches: linux/amd64,linux/arm64
             server: fpm
           - tag: web
             php_version: 8.0
+            arches: linux/amd64,linux/arm64
             server: fpm
           - tag: web
             php_version: 8.1
+            arches: linux/amd64,linux/arm64
             server: fpm
           - tag: web
             php_version: 8.2
+            arches: linux/amd64,linux/arm64
             server: fpm
           - tag: web-dev
             php_version: 8.0
+            arches: linux/amd64,linux/arm64
             server: fpm
           - tag: web-dev
             php_version: 8.1
+            arches: linux/amd64,linux/arm64
             server: fpm
           - tag: web-dev
             php_version: 8.2
+            arches: linux/amd64,linux/arm64
             server: fpm
     runs-on: ubuntu-latest
     steps:
@@ -68,7 +79,7 @@ jobs:
           context: base
           file: base/Dockerfile
           build-args: "PHP_VERSION=${{ matrix.php_version }}"
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ matrix.arches }}
           push: true
           tags: "phpimageleague/php-application-server:${{ github.run_id }}"
           cache-from: type=gha
