--- a/.github/workflows/php-application-image-manual.yml
+++ b/.github/workflows/php-application-image-manual.yml
@@ -13,6 +13,9 @@ on:
       server:
         description: 'Server ("fpm", leave empty when building the cli image).'
         default: ''
+      architectures:
+        description: 'Image architectures, comma separated'
+        default: 'linux/amd64,linux/arm64'
 jobs:
   update-image:
     runs-on: ubuntu-latest
@@ -54,11 +57,11 @@ jobs:
           context: base
           file: base/Dockerfile
           build-args: "PHP_VERSION=${{ github.event.inputs.php_version }}"
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ github.event.inputs.architectures }}
           push: true
           tags: "phpimageleague/php-application-server:${{ github.run_id }}"
           cache-from: type=gha
           cache-to: type=gha,mode=max
       -
         name: Tagging of images
-        run: make IMAGE=phpimageleague/php-application-server:${{ github.run_id }} PHP_VERSION=${{ matrix.php_version }} TAG=${{ matrix.tag }} SERVER=${{ matrix.server }} tag
+        run: make IMAGE=phpimageleague/php-application-server:${{ github.run_id }} PHP_VERSION=${{ github.event.inputs.php_version }} TAG=${{ github.event.inputs.tag }} SERVER=${{ github.event.inputs.server }} tag
