--- a/.github/workflows/php-application-image-manual.yml
+++ b/.github/workflows/php-application-image-manual.yml
@@ -50,9 +50,9 @@ jobs:
           build-args: "PHP_VERSION=${{ github.event.inputs.php_version }}"
           platforms: ${{ github.event.inputs.architectures }}
           push: true
-          tags: "phpimageleague/php-application-server:${{ github.run_id }}"
+          tags: "phpimageleague/php-application-server:build${{ github.run_id }}"
           cache-from: type=gha
           cache-to: type=gha,mode=max
       -
         name: Tagging of images
-        run: make IMAGE=phpimageleague/php-application-server:${{ github.run_id }} PHP_VERSION=${{ github.event.inputs.php_version }} TAG=${{ github.event.inputs.tag }} tag
+        run: make IMAGE=phpimageleague/php-application-server:build${{ github.run_id }} PHP_VERSION=${{ github.event.inputs.php_version }} TAG=${{ github.event.inputs.tag }} tag
