dont include fpm dockerfile; use env vars for more file access

--- a/base/php/fpm/virtual_host.conf
+++ b/base/php/fpm/virtual_host.conf
@@ -1,5 +1,6 @@
 # Default vhost config from https://symfony.com/doc/current/setup/web_server_configuration.html#nginx
 server {
+    # todo use env var for paths
     root /var/www/public;
 
     location / {
